--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
-  "name": "orion-1.5-ou-2.0-funcional-e-integrado",
+  "name": "orion-2.0-beta-test",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "test": "vitest"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.35.0",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "@google/genai": "^1.35.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^16.3.1",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0",
-    "vitest": "^4.0.17"
+    "vite": "^6.2.0"
   }
 }
